# omnischedule

./: Cargo.toml  README.md  example.toml
src/: lib.rs  main.rs  project.rs  solver.rs
